# Justice_webdev

./: .gitignore  README.md  admin-style.css  pyproject.toml  requirements.txt
AshLogistics/: README.md
AshLogistics/app/: __init__.py  extensions.py  models.py
AshLogistics/app/blueprints/admin/: __init__.py  routes.py
AshLogistics/app/blueprints/admin/static/css/: admin-style.css  policy-style.css  terms-style.css
AshLogistics/app/blueprints/admin/static/js/: policy-script.js  terms-script.js
AshLogistics/app/blueprints/admin/templates/: base.html  policies.html  terms-and-conditions.html
AshLogistics/app/blueprints/main/: __init__.py  routes.py
AshLogistics/app/blueprints/main/static/css/: main-style.css
AshLogistics/app/blueprints/main/templates/: home-page.html
AshLogistics/app/blueprints/shipping/: __init__.py  routes.py
AshLogistics/app/blueprints/shipping/static/css/: quotes-style.css  shipping-style.css
AshLogistics/app/blueprints/shipping/templates/: quote-page.html  shipping-page.html
AshLogistics/app/blueprints/support/: __init__.py  routes.py
AshLogistics/app/blueprints/support/templates/: about-us-page.html  customer-page.html
AshLogistics/app/blueprints/tracking/: __init__.py  routes.py
AshLogistics/app/blueprints/tracking/templates/: tracking-page.html
AshLogistics/app/blueprints/user/: __init__.py  routes.py
AshLogistics/app/blueprints/user/templates/: dashboard.html  login-page.html
AshLogisticsWireframes/: Ash Logistics structure.docx
db/: ash_logistics.quotes.json  ash_logistics.users.json
(+9 files in other folders)
