[tool.poetry]
name = "ashlogistics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-login = "^0.6.3"
flask-bcrypt = "^1.0.1"
flask-pymongo = "^3.0.1"
python-dotenv = "^1.0.1"
email-validator = "^2.2.0"
flask-mail = "^0.10.0"
pymongo = "^4.11"
requests = "^2.32.3"
flask-jwt-extended = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
